[gd_scene load_steps=4 format=3 uid="uid://cyf78f2y65kgv"]

[ext_resource type="Script" path="res://scripts/blocks/code_block_move.gd" id="1_mqe20"]
[ext_resource type="Texture2D" uid="uid://bvy33oc8ejgyc" path="res://assets/blocks/UpDownCommand.png" id="2_mqp0o"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wgf5c"]
radius = 9.0
height = 112.0

[node name="code_block_move" type="Node2D"]
script = ExtResource("1_mqe20")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(61.0001, 23.25)
scale = Vector2(1.15094, 1.11538)
texture = ExtResource("2_mqp0o")

[node name="Label" type="Label" parent="."]
offset_left = 5.0
offset_top = 11.0
offset_right = 64.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Walk to"

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 54.0
offset_top = 5.0
offset_right = 118.0
offset_bottom = 36.0
mouse_filter = 1
theme_override_font_sizes/font_size = 8
clip_text = true
item_count = 4
popup/item_0/text = "left"
popup/item_0/id = 0
popup/item_1/text = "right"
popup/item_1/id = 1
popup/item_2/text = "down"
popup/item_2/id = 2
popup/item_3/text = "down"
popup/item_3/id = 3

[node name="body" type="Area2D" parent="." groups=["block_body"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="body"]
position = Vector2(-0.177725, 0.785156)
scale = Vector2(0.796287, 0.69401)
polygon = PackedVector2Array(1, 3, 15, 3, 22, 10, 40, 10, 46, 3, 151, 3, 154, 7, 153, 53, 151, 55, 47, 55, 40, 63, 23, 63, 16, 55, 3, 55, 1, 52)

[node name="top_area" type="Area2D" parent="." groups=["block_snap_zone"]]

[node name="top_collision" type="CollisionShape2D" parent="top_area"]
position = Vector2(60, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wgf5c")

[node name="bottom_area" type="Area2D" parent="." groups=["block_snap_zone"]]

[node name="bottom_collision" type="CollisionShape2D" parent="bottom_area"]
position = Vector2(60, 42)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wgf5c")

[connection signal="mouse_entered" from="body" to="." method="_on_body_mouse_entered"]
[connection signal="mouse_exited" from="body" to="." method="_on_body_mouse_exited"]
[connection signal="area_entered" from="top_area" to="." method="_on_top_area_area_entered"]
[connection signal="area_exited" from="top_area" to="." method="_on_top_area_area_exited"]
[connection signal="area_entered" from="bottom_area" to="." method="_on_bottom_area_area_entered"]
[connection signal="area_exited" from="bottom_area" to="." method="_on_bottom_area_area_exited"]
